# tinyalsa

./: Android.bp  CMakeLists.txt  pcm.c  tinycap.c
include/tinyalsa/: asoundlib.h
